--- a/style.css
+++ b/style.css
@@ -18,24 +18,13 @@
 }
 
 /* Đảm bảo nội dung không bị tràn ngang */
-/*html, body {
+html, body {
     height: 100%;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
-}*/
-
-/* Đặt ảnh nền mờ cho toàn bộ trang */
-body {
-    background-image: url('.img/bannerprofile.png'); /* Thay 'your-image.jpg' bằng đường dẫn ảnh của bạn */
-    background-size: cover; /* Ảnh phủ kín màn hình */
-    background-position: center; /* Căn giữa ảnh */
-    background-attachment: fixed; /* Ảnh không cuộn theo nội dung */
-    background-repeat: no-repeat; /* Không lặp lại ảnh */
-    filter: blur(5px); /* Làm mờ ảnh */
-    -webkit-filter: blur(5px); /* Hỗ trợ trên trình duyệt WebKit */
 }
 
 /* Để nội dung nổi lên trên nền */
